duniverse/lwt/test/ppx_expect/cases/match_1.expect
File "match_1.ml", line 5, characters 4-6:
Error: This pattern matches values of type unit
       but a pattern was expected which matches values of type int
