duniverse/lwt/test/ppx_expect/cases/match_1.ml
let _ =
  match%lwt
    Lwt.return 5
  with
  | () ->
    Lwt.return ();;
